--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,15 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: cursive;
+  font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
-  display: -ms-grid;
   display: grid;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   font-size: 1.2rem;
   background: #060b23;
 }
@@ -27,7 +21,6 @@ body {
   width: 20rem;
   height: 3rem;
 }
-
 .form__input {
   position: absolute;
   top: 0;
@@ -40,18 +33,15 @@ body {
   font-size: inherit;
   color: #fff;
   outline: none;
-  padding: 1.30rem;
+  padding: 1.3rem;
   background: none;
 }
-
 .form__input:hover {
   border-color: #adffff;
 }
-
 .form__input:focus {
   border-color: #18ffff;
 }
-
 .form__label {
   position: absolute;
   left: 0.7rem;
@@ -59,16 +49,15 @@ body {
   padding: 0 0.5rem;
   color: #fff;
   cursor: text;
-  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
   transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
   background: #060b23;
 }
 
 .form__input:focus ~ .form__label,
-.form__input:not(:placeholder-shown).form__input:not(:focus)
-~ .form__label {
+.form__input:not(:placeholder-shown).form__input:not(:focus) ~ .form__label {
   top: -0.5rem;
   font-size: 0.8rem;
   left: 0.8rem;
 }
+
 /*# sourceMappingURL=style.css.map */
