--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,7 @@ $radius: 0.5rem;
 body {
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
-    display: grid;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
