--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /*   color variables */
-$clr-primary: #18ffff;
-$clr-primary-light: #adffff;
+$clr-primary: #f72585;
+$clr-primary-light: #b5179e;
 $clr-primary-dark: #091034;
 $clr-gray100: #f9fbff;
 $clr-gray150: #f4f6fb;
